@@ -14,6 +14,7 @@ _cdbs-edit-patch
 _dak
 _dchroot
 _dchroot-dsa
+_dcut
 _debchange
 _debdiff
 _debfoster
