@@ -34,6 +34,7 @@ _perl_basepods
 _perl_modules
 _pids
 _ports
+_postscript
 _printers
 _ps1234
 _pspdf
