@@ -1,3 +1,11 @@
+2013-11-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* unposted: Completion/Debian/Command/.distfiles,
+	Completion/Unix/Type/.distfiles, Config/version.mk, Etc/FAQ.yo,
+	README, Src/pattern.c, Src/signals.c, Test/.distfiles: updates
+	for 4.0.2-test-1 in preparation for 4.0.3.  Updated files
+	in .distfiles and add mod_export declarations.
+
 2013-11-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* Stefan Neudorf: 31936: Doc/Zsh/builtins.yo,
